--- a/package.xml
+++ b/package.xml
@@ -1,19 +1,16 @@
 <?xml version="1.0"?>
-<package format="2">
-  <name>dps</name>
+<package>
+  <name>pedestrian_space</name>
   <version>0.0.0</version>
-  <description>The dps package</description>
+  <description>The pedestrian_space package</description>
   <maintainer email="jhermosilla@todo.todo">jhermosilla</maintainer>
   <license>TODO</license>
-  
+
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
-  <build_export_depend>roscpp</build_export_depend>
-  <build_export_depend>std_msgs</build_export_depend>
-  <exec_depend>roscpp</exec_depend>
-  <exec_depend>std_msgs</exec_depend>
-  <export>
-
-  </export>
+  <run_depend>roscpp</run_depend>
+  <run_depend>rospy</run_depend>
+  <run_depend>std_msgs</run_depend>
 </package>
